--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -55,3 +55,6 @@
 /seamless-horizontal-asphalt-border-texture-36217475.jpg
 /tileable-light-wood-textures-2.jpg
 /under_construction.png
+/MapPanel$12.class
+/MapPanel$Gelbin.class
+/.DS_Store
